--- a/flores-amarillas-html-css-js/index2.html
+++ b/flores-amarillas-html-css-js/index2.html
@@ -60,11 +60,11 @@
     <div class="light light-11"></div>
     <div class="light light-12"></div>
     
-    <p id="text">CON CARIÑO DE [...]</p>
+    <p id="text">Con cariño Ronny</p>
 </body>
-<script>
+<!-- <script>
     function PlayAudio(){
-       document.getElementById("musica1").play(); 
+    document.getElementById("musica1").play(); 
     }
-</script>
+</script> -->
 </html>
