--- a/flores-amarillas-html-css-js/index2.html
+++ b/flores-amarillas-html-css-js/index2.html
@@ -62,9 +62,9 @@
     
     <p id="text">Con cariño Ronny</p>
 </body>
-<!-- <script>
+<script>
     function PlayAudio(){
     document.getElementById("musica1").play(); 
     }
-</script> -->
+</script>
 </html>
