--- a/flores-amarillas-html-css-js/index2.html
+++ b/flores-amarillas-html-css-js/index2.html
@@ -60,7 +60,7 @@
     <div class="light light-11"></div>
     <div class="light light-12"></div>
     
-    <p id="text">Con mucho cariño de tu chico 🫶🏼.</p>
+    <p id="text">Con mucho cariño de tu medía mitad 🤍.</p>
 </body>
 <script>
     function PlayAudio(){
